updated to 1.21.3 and updated config/readme